# TreasurMAP

./: Cargo.toml  LICENSE  README.md
src/: auth.rs  connection.rs  error.rs  handler.rs  lib.rs  mailbox.rs  main.rs  parser.rs  requests.rs  server.rs  util.rs
src/auth/: error.rs  inmemory.rs  mod.rs
src/handlers/: fetch.rs  login.rs  login_handler.rs  logout.rs  mod.rs  select.rs
src/index/: inmemory.rs  mod.rs
tests/: server_tests.rs
