[package]
name = "treasurmap"
version = "0.1.0"
edition = "2021"

[lib]
name = "imaprust"
path = "src/lib.rs"

[[bin]]
name = "imap_rust"
path = "src/main.rs"

[dev-dependencies]
imap = "2.4.1"

[dependencies]
futures = "0.3.25"
async-listen = "0.2.1"
log = "0.4.17"
async-trait = "0.1.64"
async-lock = "2.7.0"
bcrypt = "0.14.0"

[dependencies.async-std]
version = "1.11.0"
features = ["attributes"]
