[package]
name = "treasurmap"
version = "0.1.0"
edition = "2021"

[lib]
name = "imaprust"
path = "src/lib.rs"

[[bin]]
name = "imap_rust"
path = "src/main.rs"

[dev-dependencies]
imap = "2.4.1"

[dependencies]
futures = "0.3.31"
async-listen = "0.2.1"
log = "0.4.29"
async-trait = "0.1.89"
async-lock = "3.4.2"
bcrypt = "0.17.1"

[dependencies.async-std]
version = "1.13.2"
features = ["attributes"]
